compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__inlining__inline_shadowed_variable_nested.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/inlining.rs
assertion_line: 375
expression: "\npub fn sum(a, b) {\n  fn(x) {\n    let a = 7\n    fn(y) {\n      let a = 10\n      y - a\n    }(x + a)\n\n    a\n  }(a + b)\n\n  a\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn sum(a, b) {
  fn(x) {
    let a = 7
    fn(y) {
      let a = 10
      y - a
    }(x + a)

    a
  }(a + b)

  a
}


----- COMPILED JAVASCRIPT
export function sum(a, b) {
  {
    let _inline_a_0 = 7;
    {
      let _inline_a_1 = 10;
      ((a + b) + _inline_a_0) - _inline_a_1
    };
    _inline_a_0
  };
  return a;
}
