compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__inlining__inlining_works_through_blocks.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/inlining.rs
assertion_line: 256
expression: "\npub fn main() {\n    { fn(x) { Ok(x + 1) } }(41)\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
    { fn(x) { Ok(x + 1) } }(41)
}


----- COMPILED JAVASCRIPT
import { Ok } from "../gleam.mjs";

export function main() {
  return new Ok(41 + 1);
}
